--- a/codex-rs/Cargo.toml
+++ b/codex-rs/Cargo.toml
@@ -22,6 +22,7 @@ members = [
     "mcp-server",
     "mcp-types",
     "ollama",
+    "orchestrator",
     "process-hardening",
     "protocol",
     "protocol-ts",
