--- a/codex-rs/tui/Cargo.toml
+++ b/codex-rs/tui/Cargo.toml
@@ -38,6 +38,7 @@ codex-file-search = { workspace = true }
 codex-git-tooling = { workspace = true }
 codex-login = { workspace = true }
 codex-ollama = { workspace = true }
+codex-orchestrator = { path = "../orchestrator" }
 codex-protocol = { workspace = true }
 codex-app-server-protocol = { workspace = true }
 color-eyre = { workspace = true }
